--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "typescript": "^5.0.0"
   },
   "author": "Costantino Sorrentino",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FrontendNapulitan/my-own-select.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FrontendNapulitan/my-own-select/issues"
+  },
   "license": "MIT",
   "files": [
     "dist/*.js",
