--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Una select custom pronta all'uso in tutti i progetti frontend!",
   "scripts": {
     "build": "bun build --target=node ./src/index.ts --outfile=dist/index.js && bun run build:declaration",
@@ -29,6 +29,16 @@
   "bugs": {
     "url": "https://github.com/FrontendNapulitan/my-own-select/issues"
   },
+  "keywords": [
+    "select",
+    "dropdown",
+    "custom elements",
+    "web components",
+    "React",
+    "Angular",
+    "UI component",
+    "customizable"
+  ],
   "license": "MIT",
   "files": [
     "dist/*.js",
