--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,15 @@
     "strict": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "types": [
       "bun-types",
-      "react"
+      "react",
+      "solid-js"
     ]
   },
   "include": [
