--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "my-own-select",
+  "name": "my-own-select-dev",
   "module": "dist/index.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Una select custom pronta all'uso in tutti i progetti frontend!",
   "scripts": {
     "build": "bun build --target=node ./src/index.ts --outfile=dist/index.js && bun run build:declaration",
