--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-own-select-dev",
+  "name": "my-own-select",
   "module": "dist/index.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
