--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,19 +12,27 @@
     "moduleResolution": "bundler",
     "moduleDetection": "force",
     "allowImportingTsExtensions": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "noEmit": true,
     "composite": true,
     "strict": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "types": [
       "bun-types",
-      "react"
+      "react",
+      "solid-js",
+      "preact"
     ]
+  },
+  "angularCompilerOptions": {
+    "compilationMode": "partial"
   },
   "include": [
     "src/**/*.ts"
